Updating the dataset provider for KC19 and map storage.
Also, refactoring the documentation by breaking it down to single, independent pages.

Closes #179